--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,8 +12,8 @@ jobs:
     steps:
       - uses: actions/setup-go@v2
         with:
-          go-version: ^1.16
-      - run: cd /tmp && go get -v "github.com/Antonboom/errname" && errname -h
+          go-version: ^1.18
+      - run: cd /tmp && go install github.com/Antonboom/errname@${GITHUB_HEAD_REF-${GITHUB_REF##*/}} && errname -h
 
   lint:
     runs-on: ubuntu-latest
@@ -28,7 +28,7 @@ jobs:
     steps:
       - uses: actions/setup-go@v2
         with:
-          go-version: ^1.16
+          go-version: ^1.18
       - uses: actions/checkout@v2
       - run: go test -coverprofile=coverage.out ./...
       - uses: shogo82148/actions-goveralls@v1
