--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,13 +7,14 @@ on:
     branches: [ master ]
 
 jobs:
-  go_get:
+  go_install:
     runs-on: ubuntu-latest
     steps:
+      - uses: rlespinasse/github-slug-action@v4
       - uses: actions/setup-go@v2
         with:
           go-version: ^1.18
-      - run: cd /tmp && go install github.com/Antonboom/errname@${GITHUB_HEAD_REF-${GITHUB_REF##*/}} && errname -h
+      - run: cd /tmp && go install github.com/Antonboom/errname@${{ env.GITHUB_REF_NAME }} && errname -h
 
   lint:
     runs-on: ubuntu-latest
