--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -15,8 +15,8 @@ tasks:
 
   tools:install:
     - echo "Install local tools..."
-    - (which gci > /dev/null) || GO111MODULE=off go get -u github.com/daixiang0/gci
-    - (which gofumpt > /dev/null) || GO111MODULE=off go get -u mvdan.cc/gofumpt
+    - (which gci > /dev/null) || GO111MODULE=off go install github.com/daixiang0/gci@latest
+    - (which gofumpt > /dev/null) || GO111MODULE=off go install mvdan.cc/gofumpt@latest
 
   tidy:
     cmds:
@@ -27,7 +27,7 @@ tasks:
     cmds:
       - echo "Fmt..."
       - gofumpt -w .
-      - gci write -s Std -s Def -s "Prefix(github.com/Antonboom/errname)" . 2> /dev/null
+      - gci write -s standard -s default -s "Prefix(github.com/Antonboom/errname)" . 2> /dev/null
 
   lint:
     cmds:
