--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,18 +1,28 @@
+version: "2"
+
 run:
   tests: true
 
 issues:
   max-same-issues: 0
 
-linters-settings:
-  gci:
-    sections:
-      - standard
-      - default
-      - prefix(github.com/Antonboom/errname)
+formatters:
+  enable:
+    - gci
+    - gofumpt
+
+  settings:
+    gci:
+      sections:
+        - standard # A standard section: captures all standard packages.
+        - default  # Default section: contains all imports that could not be matched to another section type.
+        - prefix(github.com/Antonboom/errname)
+
+  exclusions:
+    generated: lax
 
 linters:
-  disable-all: true
+  default: none
   enable:
     - asasalint
     - asciicheck
@@ -28,7 +38,6 @@ linters:
     - exhaustive
     - exptostd
     - forbidigo
-    - gci
     - gocheckcompilerdirectives
     - gocognit
     - goconst
@@ -36,43 +45,37 @@ linters:
     - gocyclo
     - godot
     - godox
-    - gofmt
-    - gofumpt
     - goheader
-    - goimports
     - gomoddirectives
     - gomodguard
     - goprintffuncname
     - gosec
-    - gosimple
     - govet
     - importas
     - ineffassign
     - lll
     - makezero
-    - misspell
     - mirror
-    - mnd
+    - misspell
+    - musttag
     - nakedret
+    - nestif
     - nilerr
     - nilnesserr
     - nilnil
-    - nestif
     - noctx
     - nolintlint
-    - nosprintfhostport
+    - perfsprint
     - prealloc
     - predeclared
     - reassign
     - revive
     - sqlclosecheck
     - staticcheck
-    - stylecheck
     - tagliatelle
     - testableexamples
     - thelper
     - tparallel
-    - typecheck
     - unconvert
     - unparam
     - unused
@@ -80,3 +83,95 @@ linters:
     - usetesting
     - wastedassign
     - whitespace
+
+  exclusions:
+    generated: lax
+    presets:
+      - comments
+      - common-false-positives
+      - legacy
+      - std-error-handling
+
+  settings:
+    gocritic:
+      enable-all: true
+      disabled-checks:
+        - hugeParam
+        - paramTypeCombine
+        - stringConcatSimplify
+        - unnecessaryBlock
+        - whyNoLint
+        - yodaStyleExpr
+
+    govet:
+      enable-all: true
+      disable:
+        - fieldalignment
+
+    nolintlint:
+      require-explanation: true
+      allow-no-explanation: [ lll ]
+      require-specific: true
+
+    revive:
+      severity: error
+      rules:
+        - name: atomic
+        - name: blank-imports
+        - name: bool-literal-in-expr
+        - name: comment-spacings
+        - name: confusing-results
+        - name: confusing-results
+        - name: context-as-argument
+          arguments:
+            - allowTypesBefore: '*testing.T'
+        - name: context-keys-type
+        - name: datarace
+        - name: deep-exit
+        - name: defer
+        - name: dot-imports
+        - name: duplicated-imports
+        - name: early-return
+        - name: empty-block
+        - name: empty-lines
+        - name: error-naming
+        - name: error-return
+        - name: error-strings
+        - name: errorf
+        - name: exported
+        - name: get-return
+        - name: identical-branches
+        - name: if-return
+        - name: increment-decrement
+        - name: indent-error-flow
+        - name: modifies-parameter
+        - name: modifies-value-receiver
+        - name: range
+        - name: range-val-address
+        - name: range-val-in-closure
+        - name: receiver-naming
+        - name: redundant-build-tag
+        - name: redefines-builtin-id
+        - name: redundant-import-alias
+        - name: string-of-int
+        - name: superfluous-else
+        - name: time-equal
+        - name: time-naming
+        - name: unconditional-recursion
+        - name: unexported-naming
+        - name: unexported-return
+        - name: unnecessary-stmt
+        - name: unhandled-error
+          arguments:
+            - fmt.Fprint
+            - fmt.Printf
+            - fmt.Println
+            - strings.Builder.WriteRune
+        - name: unreachable-code
+        - name: unused-parameter
+        - name: use-any
+        - name: use-errors-new
+        - name: useless-break
+        - name: var-declaration
+        - name: var-naming
+        - name: waitgroup-by-value
